--- a/cloudbuild-test.yaml
+++ b/cloudbuild-test.yaml
@@ -1,13 +1,11 @@
 steps:
-  - name: python:3.11
+  - name: python:3.8
     entrypoint: python
-    id: pipinstall
+    id: Build
     args: ['-m', 'pip', 'install', 'pytest']
+    timeout: '1200s'
 
-  - name: python:3.11
+  - name: python:3.8    
     entrypoint: python
-    args: ['-m', 'pytest', 'test_parallel1.py', '-s']
-   
-  - name: python:3.11
-    entrypoint: python
-    args: ['-m', 'pytest', 'test_parallel1.py', '-s']
+    args: ['-m', 'pytest']      
+    timeout: '1800s'
