--- a/cloudbuild-test.yaml
+++ b/cloudbuild-test.yaml
@@ -1,5 +1,9 @@
 steps:
 - name: 'python:3.8'
   entrypoint: 'bash'
-  args: ['-c', 'pip install -r requirements.txt && python -m pytest']
+  args: ['-c', 'pip install -r requirements.txt']
 
+
+- name: 'python:3.8'
+  entrypoint: 'bash'
+  args: ['-c', 'python -m pytest']
