--- a/cloudbuild-test.yaml
+++ b/cloudbuild-test.yaml
@@ -1,9 +1,10 @@
 steps:
 - name: 'python:3.8'
   entrypoint: 'bash'
-  args: ['-c', 'pip install -r requirements.txt']
-
+  args: ['-c', 'pip install -r requirements.txt && python -m pytest test_parallel1.py -s']
+  waitFor: ['-']
 
 - name: 'python:3.8'
   entrypoint: 'bash'
-  args: ['-c', 'python -m pytest -vvv']
+  args: ['-c', 'pip install -r requirements.txt && python -m pytest test_parallel2.py -s']
+  waitFor: ['-']
